2004-01-31  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-edit-function-alist): New option.
	(w3m-edit-url): Refer the above alist to find a suitable function
	for editing a specified page.
	(w3m-edit-function, w3m-edit-current-url): Its docstring is
	modified to follow the above change.
	(w3m-edit-this-url): Its docstring is modified likewise, and it is
	simplified.
	(w3m-goto-url): Ignore cached form data when reloading.

	* shimbun/nnshimbun.el: Changes to make nnshimbun.el more robust.
	(nnshimbun-goto-url): Abolished.
	(gnus-summary-refer-shimbun-article): New command.
	(nnshimbun-setup-article-mode): Use the above command instead of
	the abolished one.

	* w3m.el (w3m-safe-view-this-url): Call `w3m-goto-url' when a
	function set to `w3m-goto-article-function' returns nil.

2004-01-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el: Changes to follow anchors that point Shimbun articles.
	(w3m-goto-article-function): New variable.
	(w3m-safe-view-this-url): Refer the above.

	* shimbun/nnshimbun.el: Add autoloads of `gnus-group-short-name'
	and `gnus-summary-refer-article' to avoid byte-compile warnings.
	(nnshimbun-search-xref, nnshimbun-goto-url,
	nnshimbun-setup-article-mode): New functions.

2004-01-29  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-follow-cache-control-header): New option.
	(w3m-w3m-dump-extra): If `w3m-follow-cache-control-header' is
	nil, do not follow the chache control headers.

2004-01-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Makefile.in (tarball): Because Emacs-22 has not been released,
	remove w3m-e22.el from the creating tarball.

2004-01-27  Taichi KAWABATA  <batta@beige.ocn.ne.jp>

	* w3m-e22.el: New file.  This file is simply the copy of
	w3m-e21.el except that the ccl section has been removed.

	* w3m.el: Require w3m-e22 when Emacs 22 is running.

2004-01-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-after-cursor-move-hook): Add :group keyword.