@@ -1,6 +1,7 @@
 ;;; w3mhack.el --- a hack to setup the environment for building w3m
 
-;; Copyright (C) 2001, 2002, 2003 TSUCHIYA Masatoshi <tsuchiya@namazu.org>
+;; Copyright (C) 2001, 2002, 2003, 2004
+;; TSUCHIYA Masatoshi <tsuchiya@namazu.org>
 
 ;; Author: Katsumi Yamaoka <yamaoka@jpl.org>
 ;; Keywords: w3m, WWW, hypermedia
@@ -262,6 +263,7 @@ Error: You have to install APEL before building emacs-w3m, see manuals.
   "Examine w3m modules should be byte-compile'd."
   (let* ((modules (directory-files default-directory nil "^[^#]+\\.el$"))
 	 (version-specific-modules '("w3m-e19.el" "w3m-e20.el" "w3m-e21.el"
+				     "w3m-e22.el"
 				     "w3m-fsf.el" "w3m-om.el" "w3m-xmas.el"))
 	 (ignores;; modules not to be byte-compiled.
 	  (append
@@ -270,7 +272,9 @@ Error: You have to install APEL before building emacs-w3m, see manuals.
 				   "w3m-xmas.el")
 				  ((boundp 'MULE)
 				   "w3m-om.el")
-				  ((>= emacs-major-version 21)
+				  ((>= emacs-major-version 22)
+				   '("w3m-e22.el" "w3m-fsf.el"))
+				  ((= emacs-major-version 21)
 				   '("w3m-e21.el" "w3m-fsf.el"))
 				  ((= emacs-major-version 20)
 				   '("w3m-e20.el" "w3m-fsf.el"))
